force-app/main/default/objects/CFS_Customer__c/fields/Age_Group__c.field-meta.xml
<CustomField>
    <fullName>Age_Group__c</fullName>
    <label>Age Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10-15</fullName>
            </value>
            <value>
                <fullName>15-20</fullName>
            </value>
            <value>
                <fullName>20-25</fullName>
            </value>
            <value>
                <fullName>25-30</fullName>
            </value>
            <value>
                <fullName>30-40</fullName>
            </value>
            <value>
                <fullName>40-50</fullName>
            </value>
            <value>
                <fullName>50+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>