force-app/main/default/objects/CFS_Customer__c/fields/Currently_Borrowed_Items__c.field-meta.xml
<CustomField>
    <fullName>Currently_Borrowed_Items__c</fullName>
    <label>Currently Borrowed Items</label>
    <summaryFilterItems>
        <field>CMS_Customer_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Borrow</value>
    </summaryFilterItems>
    <summaryForeignKey>CMS_Customer_Item__c.CSF_Customer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>