force-app/main/default/objects/CFS_Customer__c/fields/Total_Borrowed_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Borrowed_Items__c</fullName>
    <label>Total Borrowed and Checked out Items</label>
    <summaryForeignKey>CMS_Customer_Item__c.CSF_Customer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>