force-app/main/default/objects/CFS_Customer__c/fields/Total_Checked_out_items__c.field-meta.xml
<CustomField>
    <fullName>Total_Checked_out_items__c</fullName>
    <label>Total Checked out items</label>
    <summaryFilterItems>
        <field>CMS_Customer_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Check out</value>
    </summaryFilterItems>
    <summaryForeignKey>CMS_Customer_Item__c.CSF_Customer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>