force-app/main/default/objects/CFS_Customer__c/fields/Total_Purchase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchase_Amount__c</fullName>
    <label>Total Purchase Amount</label>
    <summarizedField>CMS_Customer_Item__c.Borrowed_Price__c</summarizedField>
    <summaryForeignKey>CMS_Customer_Item__c.CSF_Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>