force-app/main/default/objects/CFS_Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mobile__c</columns>
    <columns>Total_Borrowed_Items__c</columns>
    <columns>Currently_Borrowed_Items__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>